# escape-from-backsu-easy-ver

./: .gitignore  AGENTS.md  youtube_research_root_agent.md
content_research_mvp/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
content_research_mvp/agents/channel_fit/: AGENTS.md
content_research_mvp/agents/fact_risk/: AGENTS.md
content_research_mvp/agents/narrative/: AGENTS.md
content_research_mvp/agents/ppt/: AGENTS.md
content_research_mvp/agents/research/: AGENTS.md
content_research_mvp/agents/research_master/: AGENTS.md
content_research_mvp/agents/script/: AGENTS.md
content_research_mvp/config/: agents.toml  default.toml
content_research_mvp/docs/: api_key_request.md  data_collection_design.md  hourly_collection_process.md
content_research_mvp/tests/: conftest.py  test_brief_builder.py  test_brief_structuring.py  test_channel_fit_score.py  test_claim_extractor.py  test_collection_monitor.py  test_content_research_e2e.py  test_context_analysis.py  test_copyright_rights_gate.py  test_data_matcher.py  test_ecos_adapter.py  test_eia_adapter.py  test_evidence_card.py  test_evidence_normalizer.py  test_fact_verification.py  test_final_factcheck.py  test_fred_adapter.py  test_hourly_collection_process.py  test_issue_collection.py  test_issue_radar.py  test_kosis_adapter.py  test_models.py  test_naver_news_adapter.py  test_newsapi_adapter.py  test_nytimes_adapter.py  test_opendart_adapter.py  test_orchestrator_run.py  test_ppt_and_narrative_builders.py  test_priority_scorer.py  test_research_priority.py  test_un_comtrade_adapter.py
(+71 files in other folders)
