[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "content-research-mvp"
version = "0.1.0"
description = "Korean current affairs and economy YouTube research MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["tzdata>=2024.1; platform_system == 'Windows'"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
content-research = "content_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--basetemp=pytest_tmp_local"]
